[package]
name = "aigi_udev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smithay = {git = "https://github.com/Smithay/smithay"}
smithay-drm-extras = {git = "https://github.com/Smithay/smithay"}
anyhow = "1.0.75"
xcursor = "0.3.4"
